@@ -181,7 +181,7 @@ for configuration details.
 When building the package, interpret \fIPLATFORM\fR
 as \fBarch-vendor-os\fR and set the macros
 \fB%_target\fR,
-\fB%_target_arch\fR, and
+\fB%_target_cpu\fR, and
 \fB%_target_os\fR
 accordingly.
 .SS "REBUILD AND RECOMPILE OPTIONS"
